--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Typing Test</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="main-body">
-        <h2>Typing Speed Test</h2>
-        <p id="showSentence"></p>
-        
-        <div class="typing-section">
-            <label for="textarea"></label>
-            <textarea name="textarea" id="textarea" disabled></textarea>
-            <br>
-            <button id="btn">Start</button>
-        </div>
+      <h2>Typing Speed Test</h2>
+      <div id="timer-box">Time Left: <span id="timer">10</span> seconds</div>
+      <p id="showSentence"></p>
 
-        <p id="score"></p>
+      <div class="typing-section">
+        <label for="textarea"></label>
+        <textarea
+          name="textarea"
+          placeholder="Start typing..."
+          id="textarea"
+          disabled
+        ></textarea>
+        <br />
+        <button id="btn">Start</button>
+      </div>
+
+      <p id="score"></p>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
