Quote api integration

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="main-body">
       <h2>Typing Speed Test</h2>
-      <div id="timer-box">Time Left: <span id="timer">10</span> seconds</div>
-      <p id="showSentence"></p>
+      <div id="timer-box">Time Left: <span id="timer">30</span> seconds</div>
+      <p id="showSentence">Loading...</p>
 
       <div class="typing-section">
         <label for="textarea"></label>
